# presidio-hardened-fl

./: .gitignore  MAINTENANCE.md  PRESIDIO-REQ.md  README.md  SECURITY.md  eda.py  generate_data.py  pyproject.toml  report.py  requirements.txt  train_federated.py
.github/workflows/: ci.yml  codeql.yml
src/presidio_fl/: __init__.py  aggregator.py  client.py  data.py  dp.py  federation.py  model.py  security.py
tests/: conftest.py  test_aggregator.py  test_client.py  test_data.py  test_dp.py  test_federation.py
