[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "presidio-hardened-fl"
version = "0.1.0"
description = "Privacy-preserving federated learning with Gaussian differential privacy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Vladimir Stantchev" }]
keywords = ["federated-learning", "differential-privacy", "machine-learning", "privacy", "presidio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "scikit-learn>=1.4",
    "pandas>=2.1",
    "numpy>=1.26",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://github.com/presidio-v/presidio-hardened-fl"
Repository = "https://github.com/presidio-v/presidio-hardened-fl"

[tool.hatch.build.targets.wheel]
packages = ["src/presidio_fl"]

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101", "S311", "S301", "N802", "N803", "N806", "N818"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105"]
"generate_data.py" = ["T201"]
"eda.py" = ["T201"]
"train_federated.py" = ["T201"]
"report.py" = ["T201"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
